compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/ActualTypeAliasCustomJvmPackageName.java
@kotlin.jvm.JvmPackageName(name = "a.b.c")
public final class ActualTypeAliasCustomJvmPackageNameKt /* a.b.c.ActualTypeAliasCustomJvmPackageNameKt*/ {
}